# toml-rs

.github/workflows/: main.yml
crates/test-suite/benches/: linear.rs
crates/test-suite/tests/: datetime.rs  float.rs  invalid-misc.rs  invalid.rs  parser.rs
crates/test-suite/tests/valid/: string-delim-end.json
crates/toml/: Cargo.toml
crates/toml/src/: de.rs  tokens.rs
crates/toml_lexer/: Cargo.toml
crates/toml_lexer/src/: cursor.rs  datetime_lit.rs  error_reluctant_lexer.rs  error_resilient_lexer.rs  lexer.rs  lib.rs  num_lit.rs  num_lit2.rs  num_lit3.rs  num_lit4.rs  num_lit_old.rs  str_lit.rs  unescape.rs
